@@ -1,0 +1,14 @@
+install_files( /share/siduxcc/gtk2/icons FILES
+	about.png
+	clock.png
+	display.png
+	gnome.png
+	network.png
+	settings.png
+	audio.png
+	forum.png
+	info.png
+	printer.png
+	users.png
+)
+
